--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://sgromkov.github.io"
 
 remote_theme: pmarsceill/just-the-docs
 
-search_enabled: false
+search_enabled: true
 
 aux_links:
     "About me":
