Change aux_links value with my name

--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ remote_theme: pmarsceill/just-the-docs
 search_enabled: true
 
 aux_links:
-    "About me":
+    "Сережа Громков":
       - "//sgromkov.github.io/"
