--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,17 @@
-title: Книги
+title: Блог
 
-description: Выписки из книг, прочитанных мной
+description: Сам себя не напишет
 
-baseurl: "/books"
+baseurl: "/blog"
 
-url: "https://sgromkov.github.io"
+url: "https://gromkov.me"
 
 remote_theme: pmarsceill/just-the-docs
 
-search_enabled: true
+search_enabled: false
 
 aux_links:
     "Сережа Громков":
-      - "//sgromkov.github.io/"
+      - "//gromkov.me/"
+
+footer_content: "Copyright &copy; 2020 Sergey Gromkov."
